--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tutor Virtual</title>
+    <title>Mi App</title>
   </head>
   <body>
     <div id="root"></div>
-    <!-- OJO: ruta correcta a main.jsx -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
